[gd_scene load_steps=6 format=3 uid="uid://b0gceemxaixn2"]

[ext_resource type="PackedScene" uid="uid://cgvt340vuesj1" path="res://barra.tscn" id="1_537dr"]
[ext_resource type="Script" path="res://level.gd" id="1_wvu81"]
[ext_resource type="PackedScene" uid="uid://v3vt02w3r7nm" path="res://brick.tscn" id="2_267wg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xaytt"]
size = Vector2(66, 656)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vp0k3"]
size = Vector2(1162, 64)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_wvu81")

[node name="sides" type="Area2D" parent="."]

[node name="right" type="CollisionShape2D" parent="sides"]
position = Vector2(1184, 320)
shape = SubResource("RectangleShape2D_xaytt")

[node name="left" type="CollisionShape2D" parent="sides"]
position = Vector2(-33, 328)
shape = SubResource("RectangleShape2D_xaytt")

[node name="top" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top"]
position = Vector2(579, -32)
shape = SubResource("RectangleShape2D_vp0k3")

[node name="player" parent="." instance=ExtResource("1_537dr")]
position = Vector2(592, 640)

[node name="bricks" type="Node2D" parent="." groups=["Bricks"]]

[node name="brick" parent="bricks" instance=ExtResource("2_267wg")]
position = Vector2(88, 88)
scale = Vector2(3, 3)

[node name="brick2" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(88, 120)
scale = Vector2(3, 3)

[node name="brick3" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(168, 88)
scale = Vector2(3, 3)

[node name="brick4" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(168, 120)
scale = Vector2(3, 3)

[node name="brick5" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(88, 152)
scale = Vector2(3, 3)

[node name="brick6" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(88, 184)
scale = Vector2(3, 3)

[node name="brick7" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(168, 152)
scale = Vector2(3, 3)

[node name="brick8" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(168, 184)
scale = Vector2(3, 3)

[node name="brick9" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(248, 88)
scale = Vector2(3, 3)

[node name="brick10" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(248, 120)
scale = Vector2(3, 3)

[node name="brick11" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(328, 88)
scale = Vector2(3, 3)

[node name="brick12" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(328, 120)
scale = Vector2(3, 3)

[node name="brick13" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(248, 152)
scale = Vector2(3, 3)

[node name="brick14" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(248, 184)
scale = Vector2(3, 3)

[node name="brick15" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(328, 152)
scale = Vector2(3, 3)

[node name="brick16" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(328, 184)
scale = Vector2(3, 3)

[node name="brick17" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(408, 88)
scale = Vector2(3, 3)

[node name="brick18" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(408, 120)
scale = Vector2(3, 3)

[node name="brick19" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(488, 88)
scale = Vector2(3, 3)

[node name="brick20" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(488, 120)
scale = Vector2(3, 3)

[node name="brick21" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(408, 152)
scale = Vector2(3, 3)

[node name="brick22" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(408, 184)
scale = Vector2(3, 3)

[node name="brick23" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(488, 152)
scale = Vector2(3, 3)

[node name="brick24" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(488, 184)
scale = Vector2(3, 3)

[node name="brick25" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(568, 88)
scale = Vector2(3, 3)

[node name="brick26" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(568, 120)
scale = Vector2(3, 3)

[node name="brick27" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(648, 88)
scale = Vector2(3, 3)

[node name="brick28" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(648, 120)
scale = Vector2(3, 3)

[node name="brick29" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(568, 152)
scale = Vector2(3, 3)

[node name="brick30" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(568, 184)
scale = Vector2(3, 3)

[node name="brick31" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(648, 152)
scale = Vector2(3, 3)

[node name="brick32" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(648, 184)
scale = Vector2(3, 3)

[node name="brick33" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(728, 88)
scale = Vector2(3, 3)

[node name="brick34" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(728, 120)
scale = Vector2(3, 3)

[node name="brick35" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(808, 88)
scale = Vector2(3, 3)

[node name="brick36" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(808, 120)
scale = Vector2(3, 3)

[node name="brick37" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(728, 152)
scale = Vector2(3, 3)

[node name="brick38" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(728, 184)
scale = Vector2(3, 3)

[node name="brick39" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(808, 152)
scale = Vector2(3, 3)

[node name="brick40" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(808, 184)
scale = Vector2(3, 3)

[node name="brick41" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(888, 88)
scale = Vector2(3, 3)

[node name="brick42" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(888, 120)
scale = Vector2(3, 3)

[node name="brick43" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(968, 88)
scale = Vector2(3, 3)

[node name="brick44" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(968, 120)
scale = Vector2(3, 3)

[node name="brick45" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(888, 152)
scale = Vector2(3, 3)

[node name="brick46" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(888, 184)
scale = Vector2(3, 3)

[node name="brick47" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(968, 152)
scale = Vector2(3, 3)

[node name="brick48" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(968, 184)
scale = Vector2(3, 3)

[node name="brick49" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(1048, 88)
scale = Vector2(3, 3)

[node name="brick50" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(1048, 120)
scale = Vector2(3, 3)

[node name="brick51" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(1048, 152)
scale = Vector2(3, 3)

[node name="brick52" parent="bricks" groups=["BrickS"] instance=ExtResource("2_267wg")]
position = Vector2(1048, 184)
scale = Vector2(3, 3)

[connection signal="body_entered" from="sides" to="." method="_on_sides_body_entered"]
[connection signal="body_entered" from="top" to="." method="_on_barreira_body_entered"]
[connection signal="body_entered" from="top" to="." method="_on_top_body_entered"]
